# kallistors

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  bench_latest.md
crates/kallistors/: Cargo.toml
crates/kallistors-cli/: Cargo.toml
crates/kallistors-cli/src/: main.rs
crates/kallistors-cli/src/commands/: ec_compare.rs  ec_export.rs  ec_from_index.rs  ec_stats.rs  index_ec_dump.rs  index_info.rs  minimizer_bitmap_scan.rs  minimizer_lookup.rs  minimizer_mphf_keys.rs  minimizer_unitig_mphf_check.rs  mod.rs  pseudoalign.rs  quant.rs  trace_compare.rs  trace_reads.rs  transcript_lookup.rs  unitig_window.rs  version.rs
crates/kallistors-cli/tests/: paired_kallisto_parity.rs  real_kallisto_parity.rs
crates/kallistors/src/: error.rs  lib.rs  timing.rs
crates/kallistors/src/bias/: mod.rs
crates/kallistors/src/ec/: mod.rs
crates/kallistors/src/index/: bifrost.rs  mod.rs
crates/kallistors/src/io/: mod.rs
crates/kallistors/src/pseudoalign/: bias.rs  bifrost.rs  core.rs  debug.rs  ec.rs  io.rs  minimizers.rs  mod.rs  onlist.rs  paired.rs  single.rs  threaded.rs  utils.rs
crates/kallistors/src/quant/: mod.rs
crates/kallistors/src/util/: mod.rs
crates/kallistors/tests/: bifrost_vs_naive.rs  fragment_length_estimation.rs  kallisto_parity.rs  kallisto_shade_strand_parity.rs  paired_parity.rs  strand_reverse.rs  threaded_pseudoalign.rs  variants_parity.rs
crates/kallistors/tests/fixtures/: synthetic_transcripts.fa
crates/kallistors/tests/helpers/: mod.rs
docs/: compat_todos.md  index_format_notes.md  kallisto_debug_build.md
scripts/: bench_real_kallisto.py  compare_abundance.py  compare_accepted_hit_stream.py  compare_kallisto_simple.py  compare_kmer_divergence.py  (+4 more)
(+1 files in other folders)
