[workspace]
members = [
  "crates/kallistors",
  "crates/kallistors-cli",
]
resolver = "2"

[workspace.package]
authors = ["Denis Demin"]
license = "BSD-2-Clause"
repository = "https://github.com/deminden/kallistors"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
