[package]
name = "kallistors"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2.0.17"
croaring-sys = "4.4.1"
boomphf = "0.6.0"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }
rayon = "1.11.0"
crossbeam-channel = "0.5.15"

[dev-dependencies]
tempfile = "3.24.0"
